# sagiri-bot

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  alembic.ini  config_demo.yaml  configdemo.json  dbInit.sql  entrypoint.sh  index.html  keywords.json  main.py  message_process.py  mkdocs.yml  pyproject.toml  requirements.txt  sagiri_bot.py  sitemap.xml
.github/ISSUE_TEMPLATE/: ----.md  --bug.md  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  other_issues.md
.github/workflows/: deploy_mkdocs.yml  docker-image.yml
FAQ/: index.html
SAGIRIBOT/: decorators.py  exception_resender.py  frequency_limit_module.py  logger.py  static_datas.py  utils.py
SAGIRIBOT/Core/: AppCore.py  Exceptions.py
SAGIRIBOT/Handler/: Handler.py  MessageHandler.py  TemplateHandler.py  __init__.py
SAGIRIBOT/MessageSender/: MessageItem.py  MessageSender.py  Strategy.py  globals.py
SAGIRIBOT/ORM/: AsyncORM.py  ORM.py  Tables.py  TortoiseORM.py
SAGIRIBOT/basics/: aio_mysql_excute.py  bot_join_group_init.py  check_group_data_init.py  exception_resender.py  frequency_limit_module.py  get_json_code.py  get_response_set.py  keyword_reply.py  message_cache.py  tasks_listener.py  tools.py  write_log.py
SAGIRIBOT/bot_status/: get_bot_status.py  get_file_count.py  get_gallery_status.py  get_system_status.py  get_user_info.py
SAGIRIBOT/command_parse/: Commands.py  utils.py
SAGIRIBOT/docs/: functions.md  manage.md
SAGIRIBOT/functions/: achievement_system.py  check996.py  get_5000zhao.py  get_abbreviation_explain.py  get_almanac.py  get_chat_reply.py  get_dragon_king.py  get_group_announcement.py  get_group_quotes.py  get_history_today.py  get_jlu_csw_notice.py  get_joke.py  get_proxy.py  get_review.py  get_time.py  get_translate.py  get_xml_image.py  make_qrcode.py  object_predict.py  order_music.py  petpet.py  phantom_tank.py  pornhub_style_image.py  register.py  search_magnet.py
SAGIRIBOT/high_performances/: object_predict.py  porn_identification.py
SAGIRIBOT/images/: get_image.py  get_setu_keyword.py  get_wallpaper_time.py  image_hash.py  image_yellow_judge.py  send_images.py
SAGIRIBOT/message_sender/: group_message_sender.py
SAGIRIBOT/process/: friend_message_process.py  group_message_process.py  message_process.py  reply_process.py  setting_process.py
WebManager/: index.html  web_manager.py  websocket.py
WebManager/utils/: sqlManager.py
about/: index.html
alembic/: env.py
config/: config_demo.yaml
configuration/: index.html
core/: __init__.py
css/: extra.css
deployment/android/: index.html
deployment/docker/: index.html
deployment/linux/: index.html
deployment/windows/: index.html
development/api/: index.html
development/orm/: index.html
development/recommend_saya_standard/: index.html
development/start/: index.html
docs/: FAQ.md  about.md  configuration.md  deployment.md  function_extension.md  functions.md  index.md  manage.md  update.md
docs/deployment/: android.md  docker.md  linux.md  windows.md
docs/development/: api.md  control.md  orm.md  recommend_saya_standard.md  start.md
docs/functions/: handlers.md  required_module.md
docs/javascripts/: pageJump.js
function_extension/: index.html
functions/basics/: aio_mysql_excute.py  functions.py  get_config.py  get_json_code.py  tools.py  write_log.py
json/: auto_reply.json  json_message_code.json  reply_keywords.json  response_set.json
manage/: index.html
modules/: status.py
resources/: alembic_env_py_content.txt  config_exp.json
sagiri_bot/: config.py  control.py  decorators.py  exception_resender.py  frequency_limit_module.py  internal_utils.py  utils.py
search/: search_index.json
shared/: funcs.py
statics/: abstract_message_transformer_data.py  alembic_env_py_content.txt  bot_list.json  character_dict.py  jokes.py  pero_dog_contents.py  static_data.json  zuan.py
utils/: daily_number_limiter.py  message_chain.py
(+741 files in other folders)
